contrib/db_pools/codegen/tests/ui-fail-nightly/database-types.stderr
warning: field is never read: `query_segs`
  --> $WORKSPACE/core/lib/src/route/uri.rs
   |
   |     pub query_segs: Vec<Segment>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default
note: `Metadata` has derived impls for the traits `Clone` and `Debug`, but these are intentionally ignored during dead code analysis
  --> $WORKSPACE/core/lib/src/route/uri.rs
   |
   | #[derive(Debug, Clone)]
   |          ^^^^^  ^^^^^
   = note: this warning originates in the derive macro `Debug` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Unknown: Pool` is not satisfied
  --> tests/ui-fail-nightly/database-types.rs:7:10
   |
7  | struct A(Unknown);
   |          ^^^^^^^ the trait `Pool` is not implemented for `Unknown`
   |
note: required by a bound in `rocket_db_pools::Database::Pool`
  --> $WORKSPACE/contrib/db_pools/lib/src/database.rs
   |
   |     type Pool: Pool;
   |                ^^^^ required by this bound in `rocket_db_pools::Database::Pool`

error[E0277]: the trait bound `Vec<i32>: Pool` is not satisfied
  --> tests/ui-fail-nightly/database-types.rs:11:10
   |
11 | struct B(Vec<i32>);
   |          ^^^^^^^^ the trait `Pool` is not implemented for `Vec<i32>`
   |
note: required by a bound in `rocket_db_pools::Database::Pool`
  --> $WORKSPACE/contrib/db_pools/lib/src/database.rs
   |
   |     type Pool: Pool;
   |                ^^^^ required by this bound in `rocket_db_pools::Database::Pool`
